successful run of user create api