@@ -5,4 +5,9 @@
 ### Plan for flow
 ![img.png](img.png)
 
+
+### To run the project
+
+Add --add-opens java.base/java.time=ALL-UNNAMED to VM options in run configuration
+
 [//]: # (TODO: Add mentor and mentee record)
